Mengupdate File coba.html

--- a/coba.html
+++ b/coba.html
@@ -6,5 +6,6 @@
 <body>
     <h1>Saya Sedang Menggunakan GIT</h1>
     <h1>Saya Membuat Koneksi Komputer Lokal Ke Repo</h1>
+    <h1>Masyaallah</h1>
 </body>
 </html>
